stylesheets/style.css
/*General CSS Styling*/
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html, body {
  font-family: 'Titillium Web', sans-serif;
  font-weight: 200;
  letter-spacing: 0.2em;
  position: relative;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  -webkit-overflow-scrolling: touch;
}

body {
  overflow-x: hidden;
}

/*Navigation bar styling*/
.navbar {
  background-color: rgba(0, 0, 0, 0.7);
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  position: relative;
  top: 0;
  left: 0;
  right: 0;
}

.navbar img {
  width: 350px;
  padding: 1.5%;
}

.navbar ul {
  padding: 0;
  width: 100%;
  list-style: none;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  padding-right: 5%;
}

.navbar a{
  text-decoration: none;
  font-size: 1.1em;
  color: #7777FF;
  padding-left: 2em;
  padding-right: 2em;
}

.navbar a:hover {
  color: #7FAAFF;
}

/*Landing page styling*/
.landing-page {
  height: 100%;
  width: 100%;
  top: 0;
  background-image: url("../assets/images/shanghai_bund_blurred.jpg");
  background-size: cover;
}

.jumbotron-wrapper {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
}

.jumbotron {
  visibility: hidden;
  background-color: rgba(0, 0, 0, 0.7);
  width: 50%;
  min-width: 300px;
  height: 600px;
  margin-top: 5%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.jumbotron hr {
  margin: 0 5% 0 5%;
}

.jumbotron h1 {
  color: #7777FF;
  font-size: 5em;
  font-family: Helvetica Neue, sans-serif;
  font-weight: 100;
  text-align: center;
  padding: 4% 7% 4% 7%;
}

.jumbotron h2 {
  color: white;
  font-size: 2em;
  font-weight: 300;
  padding: 5%;
  text-align: center;
}

.school-info {
  padding: 4%;
}

.school-info h3 {
  font-weight: 200;
  text-align: center;
  padding: 1% 4% 1% 4%;
  color: white;
}

.social-media {
  display: flex;
  text-align: center;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  padding: 2%;
}

.social-media a{
  text-decoration: none;
  padding: 1em;
  color: #7777FF;
}

.scroll-down {
  width: 100%;
  position: absolute;
  bottom: 5px;
  text-align: center;
  -webkit-animation-duration: 5s;
  -webkit-animation-iteration-count: infinite;
}

.scroll-down p {
  position: relative;
  color: white;
  font-size: 1.2em;
}

.scroll-down img {
  position: relative;
  width: 30px;
  height: 30px;
}

/*Introduction and resume page styling*/
.introduction, .resume , .projects{
  background-color: #555555;
}

.intro-block, .resume-block , .projects-block{
  margin-left: 20%;
  margin-right: 20%;
  background-color: #333333;
  padding: 3% 5% 3% 5%;
}

.intro-title {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.intro-title img {
  max-width: 500px;
  max-height: 500px;
}

.intro-title h1, .resume-block  h1 , .projects-block h1{
  color: #7777FF;
  font-family: Helvetica Neue, sans-serif;
  font-size: 3.5em;
  font-weight: 100;
  text-align: center;
}

.intro-title img {
  padding: 4%;
}

.intro-content p {
  letter-spacing: 0em;
  font-weight: 200;
  color: white;
}

/*Resume (and some projects) styling*/
.resume-block {
  background-color: #444444;
}

.resume-block hr, .projects-block hr {
  border: 0;
  border-bottom: 1px dashed #ccc;
}

.resume-block h2 {
  color: white;
  font-weight: 200;
  padding-top: 1em;
}

.resume-block h3 {
  color: #7777FF;
  font-size: 1.2em;
}

.resume-block h4, .projects-block h4{
  color: white;
  font-size: 1.1em;
}

.resume-block img {
  max-width: 50px;
  max-height: 50px;
}

.education-row, .job-row , .position-row, .projects-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  color: white;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

.education-title, .job-title , .position-title, .projects-title {
  padding-top: 1em;
}

.course-work, .job-description, .position-description, .projects-description {
  color: white;
  padding-top: 0.5em;
  padding-bottom: 2em;
}

.course-work p, .job-description p, .position-description p, .projects-description p{
  letter-spacing: 0.1em;
}

.course-work ul{
  padding: 0 3% 0 3%;
}

/*Projects Section*/
.projects-block {
  background-color: #333333;
}

.projects-block a {
  color: white;
}

.projects-block h2 {
  color: #7777FF;
  font-weight: 200;
  padding-top: 1em;
}

/*Footer Styling*/
.footer {
  background-color: #666666;
  padding: 5em;
}

.footer .footer-row {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.footer a {
  text-decoration: none;
  padding: 2em;
  font-weight: 200;
  color: white;
}

.footer a:hover{
  color: #7777FF;
}

/*For responsiveness*/
@media (max-width: 1080px) {
  .jumbotron {
    height: 400px;
    margin-top: 10%;
  }

  .jumbotron h1 {
    font-size: 3em; 
  }

  .jumbotron h2 {
    font-size: 1em; 
  }

  .scroll-down p, .jumbotron h3 {
    font-size: 0.7em; 
  }

  .intro-block, .resume-block , .projects-block{
    margin: 0;
  }

  .navbar a {
    font-size: 0.7em;
  }
}

@media (max-width: 480px) {
  * {
    letter-spacing: 0.1em;
  }

  .jumbotron {
    margin: 0;
    width: 100%;
    height: 100%;
  }

  .navbar {
    display: none;
  }

  .intro-title h1, .resume-block  h1 , .projects-block h1{
    font-size: 2.5em;
  }

  .social-media {
    padding-top: 5%;
  }

  .social-media a {
    font-size: 2em;
    padding: 0;
  }
}

